[gd_scene load_steps=83 format=2]

[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Enemy/h-body.png" type="Texture" id=2]
[ext_resource path="res://Sprites/grave.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Enemy/o-body.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Enemy/h-pants-01.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Enemy/h-pants-02.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Enemy/o-pants-01.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Enemy/o-pants-02.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Enemy/h-shirt-01.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Enemy/h-shirt-02.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Enemy/h-shirt-03.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Enemy/h-armor-01.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Enemy/h-armor-02.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Enemy/h-armor-03.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Enemy/o-shirt-01.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Enemy/o-shirt-02.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Enemy/o-armor-01.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Enemy/h-hair-brown-01.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Enemy/h-hair-brown-02.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Enemy/h-hair-brown-03.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Enemy/h-hair-blond-01.png" type="Texture" id=21]
[ext_resource path="res://Sprites/Enemy/h-hair-blond-02.png" type="Texture" id=22]
[ext_resource path="res://Sprites/Enemy/h-hair-blond-03.png" type="Texture" id=23]
[ext_resource path="res://Sprites/Enemy/h-helm-01.png" type="Texture" id=24]
[ext_resource path="res://Sprites/Enemy/h-helm-02.png" type="Texture" id=25]
[ext_resource path="res://Sprites/Enemy/h-helm-03.png" type="Texture" id=26]
[ext_resource path="res://Sprites/Enemy/h-hair-red-01.png" type="Texture" id=27]
[ext_resource path="res://Sprites/Enemy/h-hair-red-02.png" type="Texture" id=28]
[ext_resource path="res://Sprites/Enemy/h-hair-red-03.png" type="Texture" id=29]
[ext_resource path="res://Sprites/Enemy/h-hair-black-01.png" type="Texture" id=30]
[ext_resource path="res://Sprites/Enemy/h-hair-black-02.png" type="Texture" id=31]
[ext_resource path="res://Sprites/Enemy/h-hair-black-03.png" type="Texture" id=32]
[ext_resource path="res://Sprites/Enemy/h-face-brown-01.png" type="Texture" id=33]
[ext_resource path="res://Sprites/Enemy/h-face-brown-02.png" type="Texture" id=34]
[ext_resource path="res://Sprites/Enemy/h-face-brown-03.png" type="Texture" id=35]
[ext_resource path="res://Sprites/Enemy/h-face-brown-04.png" type="Texture" id=36]
[ext_resource path="res://Sprites/Enemy/h-face-brown-05.png" type="Texture" id=37]
[ext_resource path="res://Sprites/Enemy/h-face-brown-06.png" type="Texture" id=38]
[ext_resource path="res://Sprites/Enemy/h-face-blond-01.png" type="Texture" id=39]
[ext_resource path="res://Sprites/Enemy/h-face-blond-02.png" type="Texture" id=40]
[ext_resource path="res://Sprites/Enemy/h-face-blond-03.png" type="Texture" id=41]
[ext_resource path="res://Sprites/Enemy/h-face-blond-04.png" type="Texture" id=42]
[ext_resource path="res://Sprites/Enemy/h-face-blond-05.png" type="Texture" id=43]
[ext_resource path="res://Sprites/Enemy/h-face-blond-06.png" type="Texture" id=44]
[ext_resource path="res://Sprites/Enemy/h-face-red-01.png" type="Texture" id=45]
[ext_resource path="res://Sprites/Enemy/h-face-red-02.png" type="Texture" id=46]
[ext_resource path="res://Sprites/Enemy/h-face-red-03.png" type="Texture" id=47]
[ext_resource path="res://Sprites/Enemy/h-face-red-04.png" type="Texture" id=48]
[ext_resource path="res://Sprites/Enemy/h-face-red-05.png" type="Texture" id=49]
[ext_resource path="res://Sprites/Enemy/h-face-red-06.png" type="Texture" id=50]
[ext_resource path="res://Sprites/Enemy/h-face-black-01.png" type="Texture" id=51]
[ext_resource path="res://Sprites/Enemy/h-face-black-02.png" type="Texture" id=52]
[ext_resource path="res://Sprites/Enemy/h-face-black-03.png" type="Texture" id=53]
[ext_resource path="res://Sprites/Enemy/h-face-black-04.png" type="Texture" id=54]
[ext_resource path="res://Sprites/Enemy/h-face-black-05.png" type="Texture" id=55]
[ext_resource path="res://Sprites/Enemy/h-face-black-06.png" type="Texture" id=56]
[ext_resource path="res://Sprites/Enemy/weapon-01.png" type="Texture" id=57]
[ext_resource path="res://Sprites/Enemy/weapon-02.png" type="Texture" id=58]
[ext_resource path="res://Sprites/Enemy/weapon-03.png" type="Texture" id=59]
[ext_resource path="res://Sprites/Enemy/weapon-04.png" type="Texture" id=60]
[ext_resource path="res://Sprites/Enemy/weapon-05.png" type="Texture" id=61]
[ext_resource path="res://Sprites/Enemy/weapon-06.png" type="Texture" id=62]
[ext_resource path="res://Sprites/Enemy/shield-01.png" type="Texture" id=63]
[ext_resource path="res://Sprites/Enemy/shield-02.png" type="Texture" id=64]
[ext_resource path="res://Sprites/Enemy/shield-03.png" type="Texture" id=65]
[ext_resource path="res://Sprites/life-container.png" type="Texture" id=66]
[ext_resource path="res://Sprites/lifebar-red.png" type="Texture" id=67]
[ext_resource path="res://Sprites/lifebar-green.png" type="Texture" id=68]
[ext_resource path="res://Sprites/lifebar-orange.png" type="Texture" id=69]
[ext_resource path="res://Sprites/lifebar-blue.png" type="Texture" id=70]
[ext_resource path="res://Sprites/lifebar-yellow.png" type="Texture" id=71]
[ext_resource path="res://Sprites/lifebar-purple.png" type="Texture" id=72]
[ext_resource path="res://Sounds/die.wav" type="AudioStream" id=73]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "normal",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "grave",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": false,
"name": "ogre",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "normal",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "ogre",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "normal",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": true,
"name": "ogre",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]

animations = [ {
"frames": [ ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ) ],
"loop": true,
"name": "brown",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ) ],
"loop": true,
"name": "blond",
"speed": 5.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ) ],
"loop": true,
"name": "helm",
"speed": 5.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ) ],
"loop": true,
"name": "red",
"speed": 5.0
}, {
"frames": [ ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ) ],
"loop": true,
"name": "black",
"speed": 5.0
} ]
_sections_unfolded = [ "Resource" ]

[sub_resource type="SpriteFrames" id=5]

animations = [ {
"frames": [ ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ) ],
"loop": true,
"name": "brown",
"speed": 5.0
}, {
"frames": [ ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ) ],
"loop": true,
"name": "blond",
"speed": 5.0
}, {
"frames": [ ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ) ],
"loop": true,
"name": "red",
"speed": 5.0
}, {
"frames": [ ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ) ],
"loop": true,
"name": "black",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=6]

animations = [ {
"frames": [ ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=7]

animations = [ {
"frames": [ ExtResource( 63 ), ExtResource( 64 ), ExtResource( 65 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=8]

custom_solver_bias = 0.0
extents = Vector2( 16, 15 )

[sub_resource type="RectangleShape2D" id=9]

custom_solver_bias = 0.0
extents = Vector2( 15, 14 )

[node name="Enemy" type="StaticBody2D" groups=[
"Enemy",
]]

input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Visibility" ]

[node name="Body" type="AnimatedSprite" parent="." index="0"]

frames = SubResource( 1 )
animation = "normal"

[node name="Parts" type="Node2D" parent="." index="1"]

[node name="Pants" type="AnimatedSprite" parent="Parts" index="0"]

frames = SubResource( 2 )
animation = "normal"

[node name="Shirt" type="AnimatedSprite" parent="Parts" index="1"]

frames = SubResource( 3 )
animation = "normal"

[node name="Hair" type="AnimatedSprite" parent="Parts" index="2"]

frames = SubResource( 4 )
animation = "black"

[node name="Face" type="AnimatedSprite" parent="Parts" index="3"]

visible = false
frames = SubResource( 5 )
animation = "default"

[node name="Weapon" type="AnimatedSprite" parent="Parts" index="4"]

frames = SubResource( 6 )
animation = "default"

[node name="Shield" type="AnimatedSprite" parent="Parts" index="5"]

visible = false
frames = SubResource( 7 )
animation = "default"

[node name="Collision" type="CollisionShape2D" parent="." index="2"]

position = Vector2( 0, 1 )
shape = SubResource( 8 )
_sections_unfolded = [ "Transform" ]

[node name="Mover" type="Tween" parent="." index="3"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="EndDetect" type="Area2D" parent="." index="4" groups=[
"End",
]]

editor/display_folded = true
position = Vector2( 0, 1 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 4
collision_mask = 4
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision", "Transform" ]

[node name="Collision" type="CollisionShape2D" parent="EndDetect" index="0"]

shape = SubResource( 9 )

[node name="Hud" type="Control" parent="." index="5"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -15.0
margin_top = 15.0
margin_right = 25.0
margin_bottom = 55.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="LifeBar01" type="TextureProgress" parent="Hud" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 25.0
step = 1.0
page = 0.0
value = 1.0
exp_edit = false
rounded = false
texture_under = ExtResource( 66 )
texture_over = null
texture_progress = ExtResource( 67 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Rect", "Textures" ]

[node name="LifeBar04" type="TextureProgress" parent="Hud" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 50.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
texture_under = null
texture_over = null
texture_progress = ExtResource( 68 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Rect", "Textures" ]

[node name="LifeBar02" type="TextureProgress" parent="Hud" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 75.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
texture_under = null
texture_over = null
texture_progress = ExtResource( 69 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Rect", "Textures" ]

[node name="LifeBar05" type="TextureProgress" parent="Hud" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
texture_under = null
texture_over = null
texture_progress = ExtResource( 70 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Rect", "Textures" ]

[node name="LifeBar03" type="TextureProgress" parent="Hud" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 125.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
texture_under = null
texture_over = null
texture_progress = ExtResource( 71 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Rect", "Textures" ]

[node name="LifeBar06" type="TextureProgress" parent="Hud" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 150.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
texture_under = null
texture_over = null
texture_progress = ExtResource( 72 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Rect", "Textures" ]

[node name="DeathSound" type="AudioStreamPlayer" parent="." index="6"]

stream = ExtResource( 73 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="tween_completed" from="Mover" to="." method="_on_Mover_tween_completed"]


